// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Attributes Attribute expressions 1`] = `
Object {
  "line": 0,
  "nodes": Array [
    Object {
      "attributeBlocks": Array [],
      "attrs": Array [
        Object {
          "column": 3,
          "line": 1,
          "mustEscape": true,
          "name": "class",
          "val": "'button'",
        },
        Object {
          "column": 18,
          "line": 1,
          "mustEscape": true,
          "name": "href",
          "val": "'google.com'",
        },
      ],
      "block": Object {
        "line": 1,
        "nodes": Array [
          Object {
            "column": 37,
            "line": 1,
            "type": "Text",
            "val": "Google",
          },
        ],
        "type": "Block",
      },
      "column": 1,
      "isInline": true,
      "line": 1,
      "name": "a",
      "selfClosing": false,
      "type": "Tag",
    },
    Object {
      "column": 2,
      "line": 2,
      "type": "Text",
      "val": "",
    },
    Object {
      "column": 1,
      "line": 3,
      "type": "Text",
      "val": "
",
    },
    Object {
      "column": 2,
      "line": 3,
      "type": "Text",
      "val": "",
    },
    Object {
      "attributeBlocks": Array [],
      "attrs": Array [
        Object {
          "column": 3,
          "line": 4,
          "mustEscape": true,
          "name": "class",
          "val": "'button'",
        },
        Object {
          "column": 19,
          "line": 4,
          "mustEscape": true,
          "name": "href",
          "val": "'google.com'",
        },
      ],
      "block": Object {
        "line": 4,
        "nodes": Array [
          Object {
            "column": 38,
            "line": 4,
            "type": "Text",
            "val": "Google",
          },
        ],
        "type": "Block",
      },
      "column": 1,
      "isInline": true,
      "line": 4,
      "name": "a",
      "selfClosing": false,
      "type": "Tag",
    },
    Object {
      "buffer": false,
      "column": 1,
      "isInline": false,
      "line": 5,
      "mustEscape": false,
      "type": "Code",
      "val": "var authenticated = true",
    },
    Object {
      "attributeBlocks": Array [],
      "attrs": Array [
        Object {
          "column": 5,
          "line": 6,
          "mustEscape": true,
          "name": "class",
          "val": "authenticated ? 'authed' : 'anon'",
        },
      ],
      "block": Object {
        "line": 6,
        "nodes": Array [],
        "type": "Block",
      },
      "column": 1,
      "isInline": false,
      "line": 6,
      "name": "div",
      "selfClosing": false,
      "type": "Tag",
    },
  ],
  "type": "Block",
}
`;

exports[`Attributes Attribute expressions 2`] = `
Object {
  "errors": Array [],
  "result": "import * as React from \\"react\\";

export default function SampleComponent(props: any) {
  return (
    <>
      <a href={\\"google.com\\"} className={\\"button\\"}>
        Google
      </a>
      <a href={\\"google.com\\"} className={\\"button\\"}>
        Google
      </a>
      {(() => {
        var authenticated = true;
        return <div className={authenticated ? \\"authed\\" : \\"anon\\"} />;
      })()}
    </>
  );
}
",
}
`;

exports[`Attributes Multiline attributes 1`] = `
Object {
  "line": 0,
  "nodes": Array [
    Object {
      "attributeBlocks": Array [],
      "attrs": Array [
        Object {
          "column": 5,
          "line": 2,
          "mustEscape": true,
          "name": "type",
          "val": "'checkbox'",
        },
        Object {
          "column": 5,
          "line": 3,
          "mustEscape": true,
          "name": "name",
          "val": "'agreement'",
        },
        Object {
          "column": 5,
          "line": 4,
          "mustEscape": true,
          "name": "checked",
          "val": true,
        },
      ],
      "block": Object {
        "line": 1,
        "nodes": Array [],
        "type": "Block",
      },
      "column": 1,
      "isInline": false,
      "line": 1,
      "name": "input",
      "selfClosing": false,
      "type": "Tag",
    },
  ],
  "type": "Block",
}
`;

exports[`Attributes Multiline attributes 2`] = `
Object {
  "errors": Array [],
  "result": "import * as React from \\"react\\";

export default function SampleComponent(props: any) {
  return <input type={\\"checkbox\\"} name={\\"agreement\\"} checked={true} />;
}
",
}
`;

exports[`Attributes Quoted attributes 1`] = `
Object {
  "line": 0,
  "nodes": Array [
    Object {
      "attributeBlocks": Array [],
      "attrs": Array [
        Object {
          "column": 5,
          "line": 1,
          "mustEscape": true,
          "name": "class",
          "val": "'div-class'",
        },
        Object {
          "column": 24,
          "line": 1,
          "mustEscape": true,
          "name": "(click)",
          "val": "'play()'",
        },
      ],
      "block": Object {
        "line": 1,
        "nodes": Array [],
        "type": "Block",
      },
      "column": 1,
      "isInline": false,
      "line": 1,
      "name": "div",
      "selfClosing": false,
      "type": "Tag",
    },
    Object {
      "attributeBlocks": Array [],
      "attrs": Array [
        Object {
          "column": 5,
          "line": 2,
          "mustEscape": true,
          "name": "class",
          "val": "'div-class'",
        },
        Object {
          "column": 23,
          "line": 2,
          "mustEscape": true,
          "name": "(click)",
          "val": "'play()'",
        },
      ],
      "block": Object {
        "line": 2,
        "nodes": Array [],
        "type": "Block",
      },
      "column": 1,
      "isInline": false,
      "line": 2,
      "name": "div",
      "selfClosing": false,
      "type": "Tag",
    },
  ],
  "type": "Block",
}
`;

exports[`Attributes Quoted attributes 2`] = `
Object {
  "errors": Array [],
  "result": "import * as React from \\"react\\";

export default function SampleComponent(props: any) {
  return (
    <>
      <div
        {...{
          \\"(click)\\": \\"play()\\"
        }}
        className={\\"div-class\\"}
      />
      <div
        {...{
          \\"(click)\\": \\"play()\\"
        }}
        className={\\"div-class\\"}
      />
    </>
  );
}
",
}
`;

exports[`Attributes Style attributes 1`] = `
Object {
  "line": 0,
  "nodes": Array [
    Object {
      "attributeBlocks": Array [],
      "attrs": Array [
        Object {
          "column": 3,
          "line": 1,
          "mustEscape": true,
          "name": "style",
          "val": "{color: 'red', background: 'green'}",
        },
      ],
      "block": Object {
        "line": 1,
        "nodes": Array [],
        "type": "Block",
      },
      "column": 1,
      "isInline": true,
      "line": 1,
      "name": "a",
      "selfClosing": false,
      "type": "Tag",
    },
  ],
  "type": "Block",
}
`;

exports[`Attributes Style attributes 2`] = `
Object {
  "errors": Array [],
  "result": "import * as React from \\"react\\";

export default function SampleComponent(props: any) {
  return (
    <a
      style={{
        color: \\"red\\",
        background: \\"green\\"
      }}
    />
  );
}
",
}
`;

exports[`Case Default usage 1`] = `
Object {
  "line": 0,
  "nodes": Array [
    Object {
      "buffer": false,
      "column": 1,
      "isInline": false,
      "line": 1,
      "mustEscape": false,
      "type": "Code",
      "val": "var friends = 10",
    },
    Object {
      "block": Object {
        "line": 3,
        "nodes": Array [
          Object {
            "block": Object {
              "line": 4,
              "nodes": Array [
                Object {
                  "attributeBlocks": Array [],
                  "attrs": Array [],
                  "block": Object {
                    "line": 4,
                    "nodes": Array [
                      Object {
                        "column": 11,
                        "line": 4,
                        "type": "Text",
                        "val": "you have no friends",
                      },
                    ],
                    "type": "Block",
                  },
                  "column": 9,
                  "isInline": false,
                  "line": 4,
                  "name": "p",
                  "selfClosing": false,
                  "type": "Tag",
                },
              ],
              "type": "Block",
            },
            "column": 5,
            "debug": false,
            "expr": "0",
            "line": 3,
            "type": "When",
          },
          Object {
            "block": Object {
              "line": 6,
              "nodes": Array [
                Object {
                  "attributeBlocks": Array [],
                  "attrs": Array [],
                  "block": Object {
                    "line": 6,
                    "nodes": Array [
                      Object {
                        "column": 11,
                        "line": 6,
                        "type": "Text",
                        "val": "you have a friend",
                      },
                    ],
                    "type": "Block",
                  },
                  "column": 9,
                  "isInline": false,
                  "line": 6,
                  "name": "p",
                  "selfClosing": false,
                  "type": "Tag",
                },
              ],
              "type": "Block",
            },
            "column": 5,
            "debug": false,
            "expr": "1",
            "line": 5,
            "type": "When",
          },
          Object {
            "block": Object {
              "line": 8,
              "nodes": Array [
                Object {
                  "attributeBlocks": Array [],
                  "attrs": Array [],
                  "block": Object {
                    "line": 8,
                    "nodes": Array [
                      Object {
                        "column": 11,
                        "line": 8,
                        "type": "Text",
                        "val": "you have ",
                      },
                      Object {
                        "buffer": true,
                        "column": 20,
                        "isInline": true,
                        "line": 8,
                        "mustEscape": true,
                        "type": "Code",
                        "val": "friends",
                      },
                      Object {
                        "column": 30,
                        "line": 8,
                        "type": "Text",
                        "val": " friends",
                      },
                    ],
                    "type": "Block",
                  },
                  "column": 9,
                  "isInline": false,
                  "line": 8,
                  "name": "p",
                  "selfClosing": false,
                  "type": "Tag",
                },
              ],
              "type": "Block",
            },
            "column": 5,
            "debug": false,
            "expr": "default",
            "line": 7,
            "type": "When",
          },
        ],
        "type": "Block",
      },
      "column": 1,
      "expr": "friends",
      "line": 2,
      "type": "Case",
    },
  ],
  "type": "Block",
}
`;

exports[`Case Default usage 2`] = `
Object {
  "errors": Array [],
  "result": "import * as React from \\"react\\";

export default function SampleComponent(props: any) {
  var friends = 10;
  return (
    <>
      {(() => {
        switch (friends) {
          case 0:
            return <p>you have no friends</p>;

          case 1:
            return <p>you have a friend</p>;

          default:
            return <p>you have {friends} friends</p>;
        }
      })()}
    </>
  );
}
",
}
`;

exports[`Conditional Default usage 1`] = `
Object {
  "line": 0,
  "nodes": Array [
    Object {
      "buffer": false,
      "column": 1,
      "isInline": false,
      "line": 1,
      "mustEscape": false,
      "type": "Code",
      "val": "var user = { description: 'foo bar baz' }",
    },
    Object {
      "buffer": false,
      "column": 1,
      "isInline": false,
      "line": 2,
      "mustEscape": false,
      "type": "Code",
      "val": "var authorised = false",
    },
    Object {
      "attributeBlocks": Array [],
      "attrs": Array [
        Object {
          "column": 1,
          "line": 3,
          "mustEscape": false,
          "name": "id",
          "val": "'user'",
        },
      ],
      "block": Object {
        "line": 3,
        "nodes": Array [
          Object {
            "alternate": Object {
              "alternate": Object {
                "line": 13,
                "nodes": Array [
                  Object {
                    "attributeBlocks": Array [],
                    "attrs": Array [
                      Object {
                        "column": 11,
                        "line": 13,
                        "mustEscape": false,
                        "name": "class",
                        "val": "'red'",
                      },
                    ],
                    "block": Object {
                      "line": 13,
                      "nodes": Array [
                        Object {
                          "column": 16,
                          "line": 13,
                          "type": "Text",
                          "val": "Description",
                        },
                      ],
                      "type": "Block",
                    },
                    "column": 9,
                    "isInline": false,
                    "line": 13,
                    "name": "h2",
                    "selfClosing": false,
                    "type": "Tag",
                  },
                  Object {
                    "attributeBlocks": Array [],
                    "attrs": Array [
                      Object {
                        "column": 10,
                        "line": 14,
                        "mustEscape": false,
                        "name": "class",
                        "val": "'description'",
                      },
                    ],
                    "block": Object {
                      "line": 14,
                      "nodes": Array [
                        Object {
                          "column": 23,
                          "line": 14,
                          "type": "Text",
                          "val": "User has no description",
                        },
                      ],
                      "type": "Block",
                    },
                    "column": 9,
                    "isInline": false,
                    "line": 14,
                    "name": "p",
                    "selfClosing": false,
                    "type": "Tag",
                  },
                ],
                "type": "Block",
              },
              "column": 5,
              "consequent": Object {
                "line": 8,
                "nodes": Array [
                  Object {
                    "attributeBlocks": Array [],
                    "attrs": Array [
                      Object {
                        "column": 11,
                        "line": 8,
                        "mustEscape": false,
                        "name": "class",
                        "val": "'blue'",
                      },
                    ],
                    "block": Object {
                      "line": 8,
                      "nodes": Array [
                        Object {
                          "column": 17,
                          "line": 8,
                          "type": "Text",
                          "val": "Description",
                        },
                      ],
                      "type": "Block",
                    },
                    "column": 9,
                    "isInline": false,
                    "line": 8,
                    "name": "h2",
                    "selfClosing": false,
                    "type": "Tag",
                  },
                  Object {
                    "attributeBlocks": Array [],
                    "attrs": Array [
                      Object {
                        "column": 10,
                        "line": 9,
                        "mustEscape": false,
                        "name": "class",
                        "val": "'description'",
                      },
                    ],
                    "block": Object {
                      "line": 9,
                      "nodes": Array [
                        Object {
                          "column": 13,
                          "line": 10,
                          "type": "Text",
                          "val": "User has no description,",
                        },
                        Object {
                          "column": 1,
                          "line": 11,
                          "type": "Text",
                          "val": "
",
                        },
                        Object {
                          "column": 13,
                          "line": 11,
                          "type": "Text",
                          "val": "why not add one...",
                        },
                      ],
                      "type": "Block",
                    },
                    "column": 9,
                    "isInline": false,
                    "line": 9,
                    "name": "p",
                    "selfClosing": false,
                    "textOnly": true,
                    "type": "Tag",
                  },
                ],
                "type": "Block",
              },
              "line": 7,
              "test": "authorised",
              "type": "Conditional",
            },
            "column": 5,
            "consequent": Object {
              "line": 5,
              "nodes": Array [
                Object {
                  "attributeBlocks": Array [],
                  "attrs": Array [
                    Object {
                      "column": 11,
                      "line": 5,
                      "mustEscape": false,
                      "name": "class",
                      "val": "'green'",
                    },
                  ],
                  "block": Object {
                    "line": 5,
                    "nodes": Array [
                      Object {
                        "column": 18,
                        "line": 5,
                        "type": "Text",
                        "val": "Description",
                      },
                    ],
                    "type": "Block",
                  },
                  "column": 9,
                  "isInline": false,
                  "line": 5,
                  "name": "h2",
                  "selfClosing": false,
                  "type": "Tag",
                },
                Object {
                  "attributeBlocks": Array [],
                  "attrs": Array [
                    Object {
                      "column": 10,
                      "line": 6,
                      "mustEscape": false,
                      "name": "class",
                      "val": "'description'",
                    },
                  ],
                  "block": Object {
                    "line": 6,
                    "nodes": Array [
                      Object {
                        "buffer": true,
                        "column": 22,
                        "isInline": true,
                        "line": 6,
                        "mustEscape": true,
                        "type": "Code",
                        "val": "user.description",
                      },
                    ],
                    "type": "Block",
                  },
                  "column": 9,
                  "isInline": false,
                  "line": 6,
                  "name": "p",
                  "selfClosing": false,
                  "type": "Tag",
                },
              ],
              "type": "Block",
            },
            "line": 4,
            "test": "user.description",
            "type": "Conditional",
          },
        ],
        "type": "Block",
      },
      "column": 1,
      "isInline": false,
      "line": 3,
      "name": "div",
      "selfClosing": false,
      "type": "Tag",
    },
  ],
  "type": "Block",
}
`;

exports[`Conditional Default usage 2`] = `
Object {
  "errors": Array [],
  "result": "import * as React from \\"react\\";

export default function SampleComponent(props: any) {
  var user = {
    description: \\"foo bar baz\\"
  };
  var authorised = false;
  return (
    <div id={\\"user\\"}>
      {user.description ? (
        <>
          <h2 className={\\"green\\"}>Description</h2>
          <p className={\\"description\\"}>{user.description}</p>
        </>
      ) : (
        <>
          {authorised ? (
            <>
              <h2 className={\\"blue\\"}>Description</h2>
              <p className={\\"description\\"}>
                User has no description, why not add one...
              </p>
            </>
          ) : (
            <>
              <h2 className={\\"red\\"}>Description</h2>
              <p className={\\"description\\"}>User has no description</p>
            </>
          )}
        </>
      )}
    </div>
  );
}
",
}
`;

exports[`Each Iteration over object 1`] = `
Object {
  "line": 0,
  "nodes": Array [
    Object {
      "attributeBlocks": Array [],
      "attrs": Array [],
      "block": Object {
        "line": 1,
        "nodes": Array [
          Object {
            "block": Object {
              "line": 3,
              "nodes": Array [
                Object {
                  "attributeBlocks": Array [],
                  "attrs": Array [],
                  "block": Object {
                    "line": 3,
                    "nodes": Array [
                      Object {
                        "buffer": true,
                        "column": 11,
                        "isInline": true,
                        "line": 3,
                        "mustEscape": true,
                        "type": "Code",
                        "val": "index + ': ' + val",
                      },
                    ],
                    "type": "Block",
                  },
                  "column": 9,
                  "isInline": false,
                  "line": 3,
                  "name": "li",
                  "selfClosing": false,
                  "type": "Tag",
                },
              ],
              "type": "Block",
            },
            "column": 5,
            "key": "index",
            "line": 2,
            "obj": "{1:'one',2:'two',3:'three'}",
            "type": "Each",
            "val": "val",
          },
        ],
        "type": "Block",
      },
      "column": 1,
      "isInline": false,
      "line": 1,
      "name": "ul",
      "selfClosing": false,
      "type": "Tag",
    },
  ],
  "type": "Block",
}
`;

exports[`Each Iteration over object 2`] = `
Object {
  "errors": Array [],
  "result": "import * as React from \\"react\\";

import { default as map } from \\"lodash/map\\";

export default function SampleComponent(props: any) {
  return (
    <ul>
      {map(
        {
          1: \\"one\\",
          2: \\"two\\",
          3: \\"three\\"
        },
        (val, index) => (
          <li>{index + \\": \\" + val}</li>
        )
      )}
    </ul>
  );
}
",
}
`;

exports[`Each Iteration with member 1`] = `
Object {
  "line": 0,
  "nodes": Array [
    Object {
      "attributeBlocks": Array [],
      "attrs": Array [],
      "block": Object {
        "line": 1,
        "nodes": Array [
          Object {
            "block": Object {
              "line": 3,
              "nodes": Array [
                Object {
                  "attributeBlocks": Array [],
                  "attrs": Array [],
                  "block": Object {
                    "line": 3,
                    "nodes": Array [
                      Object {
                        "buffer": true,
                        "column": 11,
                        "isInline": true,
                        "line": 3,
                        "mustEscape": true,
                        "type": "Code",
                        "val": "val",
                      },
                    ],
                    "type": "Block",
                  },
                  "column": 9,
                  "isInline": false,
                  "line": 3,
                  "name": "li",
                  "selfClosing": false,
                  "type": "Tag",
                },
              ],
              "type": "Block",
            },
            "column": 5,
            "key": null,
            "line": 2,
            "obj": "[1, 2, 3, 4, 5]",
            "type": "Each",
            "val": "val",
          },
        ],
        "type": "Block",
      },
      "column": 1,
      "isInline": false,
      "line": 1,
      "name": "ul",
      "selfClosing": false,
      "type": "Tag",
    },
  ],
  "type": "Block",
}
`;

exports[`Each Iteration with member 2`] = `
Object {
  "errors": Array [],
  "result": "import * as React from \\"react\\";

import { default as map } from \\"lodash/map\\";

export default function SampleComponent(props: any) {
  return (
    <ul>
      {map([1, 2, 3, 4, 5], val => (
        <li>{val}</li>
      ))}
    </ul>
  );
}
",
}
`;

exports[`Each Iteration with member and index 1`] = `
Object {
  "line": 0,
  "nodes": Array [
    Object {
      "attributeBlocks": Array [],
      "attrs": Array [],
      "block": Object {
        "line": 1,
        "nodes": Array [
          Object {
            "block": Object {
              "line": 3,
              "nodes": Array [
                Object {
                  "attributeBlocks": Array [],
                  "attrs": Array [],
                  "block": Object {
                    "line": 3,
                    "nodes": Array [
                      Object {
                        "buffer": true,
                        "column": 11,
                        "isInline": true,
                        "line": 3,
                        "mustEscape": true,
                        "type": "Code",
                        "val": "index + ': ' + val",
                      },
                    ],
                    "type": "Block",
                  },
                  "column": 9,
                  "isInline": false,
                  "line": 3,
                  "name": "li",
                  "selfClosing": false,
                  "type": "Tag",
                },
              ],
              "type": "Block",
            },
            "column": 5,
            "key": "index",
            "line": 2,
            "obj": "['zero', 'one', 'two']",
            "type": "Each",
            "val": "val",
          },
        ],
        "type": "Block",
      },
      "column": 1,
      "isInline": false,
      "line": 1,
      "name": "ul",
      "selfClosing": false,
      "type": "Tag",
    },
  ],
  "type": "Block",
}
`;

exports[`Each Iteration with member and index 2`] = `
Object {
  "errors": Array [],
  "result": "import * as React from \\"react\\";

import { default as map } from \\"lodash/map\\";

export default function SampleComponent(props: any) {
  return (
    <ul>
      {map([\\"zero\\", \\"one\\", \\"two\\"], (val, index) => (
        <li>{index + \\": \\" + val}</li>
      ))}
    </ul>
  );
}
",
}
`;
